[gd_scene load_steps=9 format=3 uid="uid://bhrjc1jsqx317"]

[ext_resource type="Script" uid="uid://bhxy56w1tmxxj" path="res://player.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://gvxwi0oob6ax" path="res://brackeys_platformer_assets/sprites/knight.png" id="1_xhfnw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kpjcp"]
atlas = ExtResource("1_xhfnw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kne1u"]
atlas = ExtResource("1_xhfnw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e80uo"]
atlas = ExtResource("1_xhfnw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxr5p"]
atlas = ExtResource("1_xhfnw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tdg3f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpjcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kne1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e80uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxr5p")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xhfnw"]
radius = 4.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
script = ExtResource("1_kpjcp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tdg3f")
autoplay = "default"
frame_progress = 0.3908205

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_xhfnw")

[node name="Dash_Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="dash_again_Timer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="timeout" from="Dash_Timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_again_Timer" to="." method="_on_dash_again_timer_timeout"]
